--- a/src/HexRaysCodeXplorer/HexRaysCodeXplorer.vcxproj
+++ b/src/HexRaysCodeXplorer/HexRaysCodeXplorer.vcxproj
@@ -93,6 +93,8 @@
     <IncludePath>$(IncludePath)</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <OutDir>$(IDADIR)\plugins\</OutDir>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <EnableClangTidyCodeAnalysis>true</EnableClangTidyCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release x64|x64'">
     <LinkIncremental>false</LinkIncremental>
