--- a/src/HexRaysCodeXplorer/PropertySheet.props
+++ b/src/HexRaysCodeXplorer/PropertySheet.props
@@ -2,8 +2,8 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <IDADIR>m:\!re\IDA71_x64</IDADIR>
-    <IDASDK>m:\!re\idasdk71</IDASDK>
+    <IDADIR>Z:\IDA\75</IDADIR>
+    <IDASDK>Z:\IDA\75\sdk</IDASDK>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup />
